# jsonl-normalizer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/jsonl_normalizer/: __init__.py  cli.py  core.py
src/jsonl_normalizer/tools/: __init__.py  concat_jsonl.py
tests/: test_basic.py  test_concat_jsonl.py  test_json_vs_jsonl.py
